[project]
name = "tinypybits"
version = "0.1.0"
description = "collection of python examples"
authors = [
  {name = "Mihhail Samusev", email = "mih.samusev@gmail.com" }
]
requires-python = ">=3.10"
readme = "README.md"

packages = [
  {include = "cli"},
  {include = "io"},
  {include = "lp"}
]

dependencies = [
    "pydantic",
    "pandas",
    "pyomo",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "pre-commit",
    "flake8",
    "pytest",
    "coverage",
    "tox",
    "tox-conda"
]